--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,29 +8,28 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="410dp"
-        android:layout_height="228dp"
+        android:layout_width="398dp"
+        android:layout_height="239dp"
         android:scaleType="fitStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/mojang"
-        tools:ignore="MissingConstraints" />
+        app:srcCompat="@drawable/mojang" />
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="142dp"
         android:layout_height="53dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="132dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="52dp"
         android:text="Mojang"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/textView2"
@@ -48,11 +47,79 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:text="We were founded in 2009 by Markus “Notch” Persson. He’s also the creator of our best-selling game to date: Minecraft. Since then, we’ve released our second game, the card-collecting tactical battler Scrolls, and have dabbled in publishing with Oxeye Game Studio’s awesome side-scrolling robo-blaster Cobalt. We’re developing more games, too, but we’re not ready to talk about those quite yet."
-        android:textSize="18sp"
+        android:text="We were founded in 2009 by Markus “Notch” Persson. He’s also the creator of our best-selling game to date: Minecraft. Since then, we’ve released our second game, the card-collecting tactical battler Scrolls, and have dabbled in publishing with Oxeye Game Studio’s awesome side-scrolling robo-blaster Cobalt."
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="28dp"
+        android:contentDescription="TODO"
+        app:layout_constraintStart_toStartOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:srcCompat="@drawable/ic_web" />
+
+    <TextView
+        android:id="@+id/textViewSite"
+        android:layout_width="140dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="28dp"
+        android:text="mojang.com"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:srcCompat="@drawable/ic_phone" />
+
+    <TextView
+        android:id="@+id/textViewPhone"
+        android:layout_width="143dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="12dp"
+        android:text="08009000"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintTop_toTopOf="@+id/imageView3"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3"
+        app:srcCompat="@drawable/ic_local" />
+
+    <TextView
+        android:id="@+id/textViewMap"
+        android:layout_width="249dp"
+        android:layout_height="31dp"
+        android:layout_marginStart="28dp"
+        android:text="Av. Magalhães Barata, 321"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
+        app:layout_constraintStart_toEndOf="@+id/imageView4"
+        app:layout_constraintTop_toTopOf="@+id/imageView4"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
